--- a/journalier.html
+++ b/journalier.html
@@ -24,7 +24,7 @@
                     <th>Lieu</th>
                     <th>Prix</th>
                     <th>Travail</th>
-                    <th>Ajouté_par</th>
+                    <th>Ajouté_pour</th>
                     <th>user_id</th>
                     <th>paiement</th> <!-- Colonne combinée -->
                     <th>Actions</th>
@@ -69,7 +69,7 @@
                     <td contenteditable="true" data-column="Lieu">${event.Lieu !== null ? event.Lieu : ''}</td>
                     <td contenteditable="true" data-column="Prix">${event.Prix !== null ? event.Prix : ''}</td>
                     <td contenteditable="true" data-column="Travail">${event.Travail !== null ? event.Travail : ''}</td>
-                    <td contenteditable="true" data-column="Ajouté_par">${event.Ajouté_par !== null ? event.Ajouté_par : ''}</td>
+                    <td contenteditable="true" data-column="Ajouté_pour">${event.Ajouté_pour !== null ? event.Ajouté_pour : ''}</td>
                     <td contenteditable="true" data-column="user_id">${event.user_id}</td>
                     <td>
                         <div class="checkbox-container" style="font-size: smaller;">
