--- a/calendrier.html
+++ b/calendrier.html
@@ -9110,7 +9110,7 @@
         <div class="form-wrapper">
             <div class="form-container">
                 <h2 data-i18n="new_event_heading">Nouvel événement</h2>
-                <input type="text" id="Téléphone" placeholder="Num. Client" data-i18n-placeholder="placeholder_phone">
+                <input type="text" id="Téléphone" placeholder="Num. Client">
                 <input type="text" id="Nom" list="noms-list" placeholder="Nom" data-i18n-placeholder="placeholder_name">
                 <datalist id="noms-list">
                     <!-- Les options seront ajoutées dynamiquement -->
