--- a/calendrier.html
+++ b/calendrier.html
@@ -9077,7 +9077,7 @@
             <table id="editable-table">
                 <thead>
                     <tr>
-                        <th id="header-telephone" data-i18n="table_header_phone">Téléphone</th>
+                        <th id="header-telephone" data-i18n="table_header_phone">Num. Client</th>
                         <th data-i18n="table_header_name">Nom</th>
                         <th data-i18n="table_header_date">Date</th>
                         <th data-i18n="table_header_time">Heure</th>
