--- a/calendrier.html
+++ b/calendrier.html
@@ -3535,6 +3535,10 @@
         let currentClientLieux = [];
         let currentClientData = null;
 
+        // === AJOUT: Variables pour la transformation automatique du lieu ===
+        let lieuEstTransforme = false;
+        let lieuOriginal = '';
+
         // === AJOUT: Variables pour autocomplétion nom ===
         let currentClientNames = [];
 
@@ -3547,14 +3551,8 @@
         // === AJOUT: Fonction pour créer le lien Google Maps ===
         function createGoogleMapsLink(adresse) {
             if (!adresse || adresse.trim() === '') return adresse;
-
-            // Si c'est déjà un lien, ne rien faire
             if (adresse.includes('http://') || adresse.includes('https://')) return adresse;
-
-            // Vérifier si c'est une adresse valide (contient au moins un chiffre et une lettre)
             if (!/\d/.test(adresse) || !/[a-zA-Z]/.test(adresse)) return adresse;
-
-            // Créer le lien Google Maps avec le format exact
             return `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(adresse.trim())}`;
         }
 
@@ -3565,8 +3563,11 @@
             const date = document.getElementById('Date') ? document.getElementById('Date').value || null : null;
             const heure = document.getElementById('Heure') ? document.getElementById('Heure').value || null : null;
             const min = document.getElementById('Min') ? document.getElementById('Min').value || null : null;
-            const lieuBrut = document.getElementById('Lieu') ? document.getElementById('Lieu').value || null : null;
-            const lieu = lieuBrut ? createGoogleMapsLink(lieuBrut) : null;
+            let lieu = document.getElementById('Lieu') ? document.getElementById('Lieu').value || null : null;
+            // Si le lieu n'est pas encore transformé mais contient une adresse, le transformer
+            if (lieu && !lieu.includes('http') && lieu.trim() !== '') {
+                lieu = createGoogleMapsLink(lieu);
+            }
             const prix = document.getElementById('Prix') ? document.getElementById('Prix').value || null : null;
             const observations = "";
             const nombre_heures = document.getElementById('NombreHeures') ? document.getElementById('NombreHeures').value || null : null;
@@ -4236,6 +4237,49 @@
                 }
             }
         });
+
+        // === AJOUT: Fonctions pour transformation auto du lieu ===
+        function transformerLieuEnLien() {
+            const lieuField = document.getElementById('Lieu');
+            if (!lieuField || !lieuField.value.trim()) return;
+
+            // Sauvegarder l'original avant transformation
+            lieuOriginal = lieuField.value;
+            const lien = createGoogleMapsLink(lieuField.value);
+
+            lieuField.value = lien;
+            lieuField.style.color = '#0066cc';
+            lieuField.style.textDecoration = 'underline';
+            lieuField.title = "Cliquer pour ouvrir dans Google Maps - Double-cliquer pour éditer";
+            lieuEstTransforme = true;
+        }
+
+        function retransformerLienEnTexte() {
+            const lieuField = document.getElementById('Lieu');
+            if (!lieuField || !lieuEstTransforme) return;
+
+            // Restaurer l'adresse originale
+            lieuField.value = lieuOriginal;
+            lieuField.style.color = '';
+            lieuField.style.textDecoration = '';
+            lieuField.title = "";
+            lieuEstTransforme = false;
+        }
+
+        function handleLieuClick(e) {
+            if (lieuEstTransforme) {
+                // Double-clic pour éditer un lien
+                if (e.detail === 2) {
+                    retransformerLienEnTexte();
+                    lieuField.select();
+                }
+            }
+        }
+
+        // === AJOUT: Événements pour le champ Lieu ===
+        document.getElementById('Lieu').addEventListener('blur', transformerLieuEnLien);
+        document.getElementById('Lieu').addEventListener('focus', retransformerLienEnTexte);
+        document.getElementById('Lieu').addEventListener('click', handleLieuClick);
 
 
             let isCalendarGenerated = false;
