--- a/calendrier.html
+++ b/calendrier.html
@@ -5066,9 +5066,19 @@
                       row.dataset.id = event.user_id;
 
                       // Si le champ "Lieu" contient une URL, on la transforme en lien cliquable
-                      const lieuContent = event.Lieu && event.Lieu.includes('http')
-                      ? `<a href="${event.Lieu}" target="_blank" style="color: #0066cc; text-decoration: none;">📍 Voir sur Maps</a>`
-                      : event.Lieu;
+                      const lieuContent = event.Lieu && event.Lieu.includes('https://www.google.com/maps/')
+                          ? `<a href="${event.Lieu}" target="_blank" style="color: #0066cc; text-decoration: none;">${extractAdresseFromLink(event.Lieu)}</a>`
+                          : event.Lieu;
+
+                        function extractAdresseFromLink(lien) {
+                            try {
+                                const url = new URL(lien);
+                                const query = url.searchParams.get('query');
+                                return query ? decodeURIComponent(query) : 'Adresse Maps';
+                            } catch (e) {
+                                return 'Adresse Maps';
+                            }
+                        }
 
                       // Définir la valeur de contenteditable en fonction du statut de l'utilisateur
                       const editableAttr = isConfigUser ? 'true' : 'false';
