--- a/calendrier.html
+++ b/calendrier.html
@@ -7908,21 +7908,6 @@
 
         let currentWeekStart = null;
 
-        // Fonction pour vérifier si l'utilisateur est configurateur
-        function isConfigUser() {
-            // Vérifiez d'abord dans l'URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const urlIsConfig = urlParams.get('isConfig');
-
-            if (urlIsConfig !== null) {
-                return urlIsConfig === 'true';
-            }
-
-            // Sinon vérifiez dans le localStorage
-            const localIsConfig = localStorage.getItem('currentPersonIsConfigUser');
-            return localIsConfig === 'true';
-        }
-
         async function loadWeeklyView() {
             console.log('🔄 loadWeeklyView démarré');
 
@@ -8159,7 +8144,7 @@
             eventElement.className = 'slot-event';
 
             // Draggable uniquement pour les configurateurs
-            eventElement.draggable = isConfigUser();
+            eventElement.draggable = isConfigUser;
 
             eventElement.dataset.eventId = event.user_id;
 
@@ -8188,7 +8173,7 @@
             });
 
             // Ajouter l'événement dragstart uniquement si draggable
-            if (isConfigUser()) {
+            if (isConfigUser) { // ✅ Utilise la variable directement
                 eventElement.addEventListener('dragstart', handleDragStart);
             }
 
